--- a/404.html
+++ b/404.html
@@ -1,5 +1,10 @@
 ---
-permalink: /404.html
+redirect_from:
+- /checkout/
+- /css/
+- /js/
+- /img/
+sitemap: false
 ---
 
 <style type="text/css" media="screen">
