--- a/checkout/license.html
+++ b/checkout/license.html
@@ -4,6 +4,6 @@ script: /js/license.js
 style: /css/license.css
 ---
 
-<h1 id="license-title"></h1>
+<h1>Thank you for your purchase!</h1>
 <p>Your new license key:</p>
-<p id="license-key"></p>
+<p id="license-key" class="monospace"></p>
