--- a/checkout/license.html
+++ b/checkout/license.html
@@ -5,5 +5,5 @@ style: /css/license.css
 ---
 
 <h1>Thank you for your purchase!</h1>
-<p>Your new license key:</p>
+<p>Your new <span id="license-tier"></span> license key:</p>
 <p id="license-key" class="monospace"></p>
