Add download button

--- a/checkout/license.html
+++ b/checkout/license.html
@@ -7,3 +7,6 @@ style: /css/license.css
 <h1>Thank you for your purchase!</h1>
 <p>Your new <span id="license-tier"></span> license key:</p>
 <p id="license-key" class="monospace"></p>
+
+<a class="button" id="controller-download" download>Download</a>
+<p>Save this download link, it wont be shown again unless you contact support via Discord.</p>
