--- a/pricing.html
+++ b/pricing.html
@@ -11,13 +11,13 @@ publishable-key="pk_live_51PJbtbP4WRD7l09OGytNYJPYubq93JMpZQDyjl2n0fOI1zAl6VgOjR
 </stripe-pricing-table>
 
 <h2>Already have a license?</h2>
-<p>Enter your license key below to upgrade to a higher tier.</p>
+<p>Enter your existing Nexus v3 license key below to upgrade to a higher tier.</p>
 
 
 <div id="upgrade" class="flex-column">
 	<form id="upgrade-license" class="flex-column">
-		<input type="text" name="licenseGUID" placeholder="00000000-0000-0000-0000-000000000000">
-		<input type="submit" value="Upgrade" class="button">
+		<input id="upgrade-license-input" type="text" name="licenseGUID" placeholder="00000000-0000-0000-0000-000000000000">
+		<input id="upgrade-license-submit" type="submit" value="Upgrade" class="button">
 	</form>
 	<div id="upgrade-final" class="flex-column hidden">
 		<select id="upgrade-select"></select> 
